# brew-analyzer

./: README.md  all_brew_dependencies.dot  brew_analyzer.py  ghostty_dependencies.dot  htop_dependencies.dot  pyproject.toml
